Fix duplicate elements in mobile top header and adjust visibility based on screen size

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -9,9 +9,9 @@ body, html {
 
 /* Background image for the body */
 body {
-    background: url('/media/home-page-logo-gym-anderson-health-fitness.webp') no-repeat center center fixed;
+    background: url('/media/home-page-hero-gym-anderson-health-fitness.webp') no-repeat center center fixed;
     background-size: cover;
-    height: calc(100vh - 164px); /* This can be adjusted based on your design needs */
+    height: calc(100vh - 164px);
 }
 
 /* Ensuring the navbar and its container fill the entire width */
